# chordTUI

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  package.json
.github/workflows/: ci.yml
docs/: probe-matrix.md
engine/: analyze.py  engine-info.schema.json  engine_info.py  mock_sidecar.py  probe_madmom.py  protocol.py  pyproject.toml  schema.json  selftest.py
engine/engines/: __init__.py  btc_engine.py  librosa_engine.py  madmom_engine.py
src/: index.tsx
src/cli/: commands.ts
src/components/: AnalysisView.tsx  App.tsx  ChordTimeline.tsx  ErrorBoundary.tsx  FilePicker.tsx  Header.tsx  KeyPanel.tsx  ProgressionPanel.tsx  StatusBar.tsx  theme.ts
src/core/: cache.ts  consent.ts  engine.ts  engineResolve.ts  music.ts  panels.ts  types.ts  validate.ts
src/hooks/: useAnalysis.ts
tests/fixtures/: make_fixtures.py
tests/fixtures/btc_golden/: btc_fidelity.majmin.lab  btc_fidelity.voca.lab
tests/fixtures/ground_truth/: i_iv_v_i_a_minor.json  i_iv_v_i_c_major.json  out_of_key_chord.json  silence_sections.json  vi_iv_i_v_c_major.json
tests/py/: accuracy.py  test_accuracy.py  test_accuracy_madmom.py  test_btc_engine.py  test_btc_fidelity.py  test_librosa_engine.py  test_madmom_engine.py  test_madmom_key_clamp.py  test_schema.py
tests/ts/: analysisView.test.tsx  app.test.tsx  cache.test.ts  cancel.test.tsx  cli.test.ts  consent.test.ts  contract.test.ts  engine.test.ts  music.test.ts  panels.test.ts  reducer.test.ts  setup.test.ts
tools/: eval_guitarset.py
