[project]
name = "chordtui-engine"
version = "0.0.0"
description = "chordTUI audio-analysis sidecar (key / chords / progression)"
requires-python = ">=3.9,<3.10"
# Clean core only — ISC/BSD/MIT family. The lean, always-installs preview + fallback tier (py3.9).
dependencies = [
    "numpy<1.24",
    "scipy<1.13",
    "librosa>=0.10,<0.11",
    "soundfile",
]

# The opt-in accuracy tier is installed by `chord setup` into a SEPARATE venv (engine/.venv-btc),
# NOT via uv extras, so heavy/extra deps never enter this clean-core lock:
#   btc      : torch + librosa (py3.11) running the vendored MIT BTC-ISMIR19 model
#              (engine/vendor/btc). Permissive end to end — no NonCommercial consent. See
#              docs/probe-matrix.md §7. resolveEngine prefers .venv-btc when present.
#   essentia : uv pip install "essentia"   (AGPL-3.0) — reserved, not implemented

[dependency-groups]
dev = ["pytest", "ruff", "jsonschema"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
# Vendored third-party code (BTC-ISMIR19, MIT) is kept verbatim — don't lint it.
extend-exclude = ["vendor"]

[tool.pytest.ini_options]
testpaths = ["../tests/py"]
